# simpleShell

./: CLAUDE.md  pyproject.toml  rootprompt.md  simpleshell.py
src/simpleshell/: __init__.py  __main__.py  builtins.py  completion.py  expansion.py  pipeline.py  shell.py  tokenizer.py
tests/: test_builtins.py  test_completion.py  test_expansion.py  test_pipeline.py  test_shell.py  test_system.py  test_tokenizer.py
