[project]
name = "simpleshell"
version = "0.2.0"
description = "A minimal interactive shell written in Python using only the standard library"
requires-python = ">=3.12"
license = "MIT"

[project.scripts]
simpleshell = "simpleshell.shell:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simpleshell"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["simpleshell"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a7",
]
